--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
         ];
 
         var labels = [
-            "About Me", "Projects", "Contact", "Blog", "Gallery", "Services", "Testimonials", "FAQ", "Careers"
+            "About Me", "Github", "Contact", "Services", "Shapediver", "Instagram", "Blog", "Researchgate", "Linkedin"
         ];
 
         var links = [
-            "https://example.com/about", "https://example.com/projects", "https://example.com/contact", "https://example.com/blog", "https://example.com/gallery", "https://example.com/services", "https://example.com/testimonials", "https://example.com/faq", "https://example.com/careers"
+            "https://www.10k-designs.com/", "https://github.com/alex10kd/", "alex@10k-designs.com", "https://www.10k-designs.com/services-2", "https://www.shapediver.com/app/users/alexat10k-designs-com", "https://www.instagram.com/10.000designs/", "https://www.10k-designs.com/blog", "https://www.researchgate.net/profile/Alexandros-Christodoulou", "https://www.linkedin.com/in/achristodoulou"
         ];
 
         var raycaster = new THREE.Raycaster();
