--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Three.js Animated Slab Grid with Interactive Hover</title>
+    <title>Alex Christodoulou's Landing Page</title>
     <style>
         body { margin: 0; overflow: hidden; }
         canvas { display: block; }
