--- a/index.html
+++ b/index.html
@@ -18,6 +18,24 @@
 </head>
 <body>
     <div id="label"></div>
+	<div id="about" style="display: none; position: absolute; top: 10%; left: 10%; width: 80%; background: transparent; padding: 20px; color: white; font-size: 18px;"><b>Alex in a nutshell:</b><br>
+- Computational Design Technology Specialist with over a decade of experience in the AEC industry<br>
+- Advanced expertise in digital design and optimization frameworks<br>
+- Most common roles: Software Developer, Solutions Architect, Computational Designer and Design Team Lead<br>
+- For 8 years a leading figure for Parametric Design at Arup<br>
+- Now a Freelance Parametric Specialist and PhD Candidate at the University of Thessaly<br>
+- Major contributions to projects such as Valley, Smakkelaarspark and the Bernabéu Stadium renovation<br>
+- Specialist in parametric building design, masterplanning and building stock analysis<br>
+- Teaching experience at IaaC, TU Delft, and KU Leuven<br>
+- Publications and Presentations at conferences such as IASS, SimAUD, and Design Modeling Symposium<br></div>
+	<div id="contact" style="display: none; position: absolute; top: 5%; left: 10%; width: 80%; background: transparent; padding: 20px; color: white; font-size: 18px;">alex@10k-designs.com</div>
+	<div id="services" style="display: none; position: absolute; bottom: 10%; left: 10%; width: 80%; background: transparent; padding: 20px; color: white; font-size: 18px;"><b>Main Services</b><br>
+<b>Workflow Automation</b><br> - Streamlining processes, reducing error, and boosting productivity to focus on core objectives.<br>
+<b>C# and Grasshopper Scripting</b><br> - Custom scripting solutions in C# and Grasshopper to expand design capabilities and automate complex tasks.<br>
+<b>Design Optimization</b><br> - Enhancing concepts for maximum performance, aesthetics, and cost-efficiency.<br>
+<b>BIM Modeling</b><br> - Delivering data-rich BIM models to improve coordination, clash detection, and streamlined project delivery.<br>
+<b>Generative Design</b><br> - Leveraging algorithms for innovative, adaptable design solutions tailored to unique project needs.<br>
+<b>Digital Design Consultations</b><br> - Providing expertise, tools, and strategies for clients to embrace cutting-edge design technology.<br></div>
     <!-- Include Three.js library from CDN -->
     <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.min.js"></script>
     <script>
@@ -74,11 +92,11 @@
         ];
 
         var labels = [
-            "About Me", "Github", "Contact", "Services", "Shapediver", "Instagram", "Blog", "Researchgate", "Linkedin"
+            "About Me", "Contact", "Services","Github",  "Shapediver", "Instagram", "Blog", "Researchgate", "Linkedin"
         ];
 
         var links = [
-            "https://www.10k-designs.com/", "https://github.com/alex10kd/", "alex@10k-designs.com", "https://www.10k-designs.com/services-2", "https://www.shapediver.com/app/users/alexat10k-designs-com", "https://www.instagram.com/10.000designs/", "https://www.10k-designs.com/blog", "https://www.researchgate.net/profile/Alexandros-Christodoulou", "https://www.linkedin.com/in/achristodoulou"
+            "#about",  "mailto:alex@10k-designs.com", "https://www.10k-designs.com/services-2","https://github.com/alex10kd/", "https://www.shapediver.com/app/users/alexat10k-designs-com", "https://www.instagram.com/10.000designs/", "https://www.10k-designs.com/blog", "https://www.researchgate.net/profile/Alexandros-Christodoulou", "https://www.linkedin.com/in/achristodoulou"
         ];
 
         var raycaster = new THREE.Raycaster();
@@ -269,7 +287,19 @@
 
             if (intersects.length > 0) {
                 var intersectedGroup = intersects[0].object.parent;
-                window.open(intersectedGroup.userData.link, '_blank');
+                if (intersectedGroup.userData.label === "About Me") {
+                    document.getElementById('about').style.display = 'block';
+                } else if (intersectedGroup.userData.label === "Contact") {
+                    document.getElementById('contact').style.display = 'block';
+					 } else if (intersectedGroup.userData.label === "Services") {
+                    document.getElementById('services').style.display = 'block';
+                } else {
+                    window.open(intersectedGroup.userData.link, '_blank');
+                }
+            } else {
+                document.getElementById('about').style.display = 'none';
+				document.getElementById('contact').style.display = 'none';
+				document.getElementById('services').style.display = 'none';
             }
         });
     </script>
