--- a/index.html
+++ b/index.html
@@ -102,6 +102,21 @@
         var raycaster = new THREE.Raycaster();
         var mouse = new THREE.Vector2();
         var labelElement = document.getElementById('label');
+        
+        // Show all labels initially for mobile users
+        if (/Mobi|Android/i.test(navigator.userAgent)) {
+            boxes.forEach(function(group) {
+                var labelDiv = document.createElement('div');
+                labelDiv.style.position = 'absolute';
+                labelDiv.style.color = 'white';
+                labelDiv.style.fontSize = '18px';
+                labelDiv.style.pointerEvents = 'none';
+                labelDiv.style.left = (window.innerWidth / 2) + group.position.x + 'px';
+                labelDiv.style.top = (window.innerHeight / 2) - group.position.z + 'px';
+                labelDiv.innerHTML = group.userData.label;
+                document.body.appendChild(labelDiv);
+            });
+        }
 
         function createBox(i, j, index) {
             var group = new THREE.Group();
@@ -167,7 +182,7 @@
             var height = group.userData.height;
             var columnSpacing = 10;
             var numSlabs = Math.floor(height / 5); // Ensure columns match the number of slabs
-            var columnHeight = (numSlabs) * 5.5; // Columns should reach the last slab
+            var columnHeight = (numSlabs + 1) * 5.5; // Columns should reach the last slab
             var columnGeometry = new THREE.BoxGeometry(1.5, columnHeight, 1.5);
             var columnMaterial = new THREE.MeshPhysicalMaterial({
                 color: color,
@@ -246,7 +261,7 @@
             camera.updateProjectionMatrix();
         });
 
-         // Handle mouse movement for hover interaction
+        // Handle mouse movement for hover interaction
         window.addEventListener('mousemove', function(event) {
             document.body.style.cursor = 'default';
             mouse.x = (event.clientX / window.innerWidth) * 2 - 1;
@@ -270,7 +285,7 @@
                     group.userData.animating = false;
                 }
                 });
-                cameraRotating = true;
+                cameraRotating = false;
             } else {
                 labelElement.style.display = 'none';
                 boxes.forEach(function(group) {
@@ -290,20 +305,24 @@
                 if (intersectedGroup.userData.label === "About Me") {
                     document.getElementById('about').style.display = 'block';
                 } else if (intersectedGroup.userData.label === "Contact") {
-                    document.getElementById('contact').style.display = 'block';
-					 } else if (intersectedGroup.userData.label === "Services") {
-                    document.getElementById('services').style.display = 'block';
+                    window.location.href = intersectedGroup.userData.link;
                 } else {
                     window.open(intersectedGroup.userData.link, '_blank');
                 }
             } else {
                 document.getElementById('about').style.display = 'none';
-				document.getElementById('contact').style.display = 'none';
-				document.getElementById('services').style.display = 'none';
+            }
+                } else if (intersectedGroup.userData.label === "Contact") {
+                    window.location.href = intersectedGroup.userData.link;
+                } else {
+                    window.open(intersectedGroup.userData.link, '_blank');
+                }
+            } else {
+                document.getElementById('about').style.display = 'none';
             }
         });
-		
-		// Add controls for mobile users
+    
+        // Add controls for mobile users
         if (/Mobi|Android/i.test(navigator.userAgent)) {
             window.addEventListener('touchstart', function(event) {
                 event.preventDefault();
